# ImageCompressor

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wangxingxing/imagecompressor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h  native-lib.cpp
app/src/main/java/com/wangxingxing/imagecompressor/: App.kt  CompressUtils.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/wangxingxing/imagecompressor/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
